--- a/style.css
+++ b/style.css
@@ -46,6 +46,21 @@
     text-align: left;
 }
 
+#uvindex.favorable {
+    background-color: green;
+    padding: 3px;
+}
+
+#uvindex.moderate {
+    background-color: yellow;
+    padding: 3px;
+}
+
+#uvindex.severe {
+    background-color: red;
+    padding: 3px;
+}
+
 
 /* .fa-search {
     background-color: blue;
